--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           sudo apt-get install -y build-essential cmake ninja-build
 
       - name: Configure
-        run: cmake -S . -B ${{ env.BUILD_DIR }} -G Ninja -DCMAKE_BUILD_TYPE=Debug
+        run: cmake -S . -B ${{ env.BUILD_DIR }} -G Ninja -DCMAKE_BUILD_TYPE=Debug -DERBSLAND_CONFIGURATION_ENABLE_TESTS=ON
 
       - name: Build
         run: cmake --build ${{ env.BUILD_DIR }} --config Debug
